[package]
name = "fnotation"
version = "0.10.0"
edition = "2021"
license = "MIT"
keywords = ["compilers", "parsing"]
categories = ["compilers"]
description = "A simple lower-house syntax for programming language experimentation"
repository = "https://github.com/ToposInstitute/fnotation.git"
homepage = "https://github.com/ToposInstitute/fnotation"
readme = "README.md"

[dependencies]
ansi_term = "0.12.1"
bumpalo = { version = "3.17.0", features = ["collections"] }
indoc = "2.0.6"
pretty = "0.12.3"
tattle = "0.4.0"

[dev-dependencies]
expect-test = "1.5.1"
