[package]
name = "fnotation-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
bumpalo = "3.19.0"
libfuzzer-sys = "0.4"
tattle = "0.4.3"

[dependencies.fnotation]
path = ".."

[[bin]]
name = "fnotation"
path = "fuzz_targets/fnotation.rs"
test = false
doc = false
bench = false
